@startuml
'https://plantuml.com/sequence-diagram
class Boss{
    [private]
    String login;
    String haslo;
    list_all();
    list_some();
    getters&setters();
}
class Employee{
    [private]
    int idNum;
    String imie;
    String nazwisko;
    String pesel;
    String obywatelstwo;
    String stanowisko;
    String address;
    String email;
    String data_urodzenia
    int dni_wolne;
    double wynagrodzenie;
    getters_&_setters();
}
class HR{
    employee_add(Worker w);
    employee_del(Worker w);
    employee_edit(Worker w);
    getters_&_setters();
}
class Filter{
    [private]
    data_wyszukania
    id_wyszukania
    tytul_wyszukania
    getters_&_setters()
}
class Edit{
    [private]
    data_edycji
    id_edycji
    tytul_edycji
    getters_&_setters()
}
HR o-- Employee
Boss <|-- HR
Boss o-- Employee
Boss o-- Filter
Filter --|> Employee
Edit --|> Employee
@enduml